--- a/ansible/roles/deploy_ecs/tasks/main.yml
+++ b/ansible/roles/deploy_ecs/tasks/main.yml
@@ -38,12 +38,12 @@
 
   when: work_env == "QA"
 
-- name: Stop a task
-  community.aws.ecs_task:
-    operation: stop
-    cluster: "{{ cluster_name }}"
-    task_definition: "{{ ecs_family }}"
-    task: "*"
+# - name: Stop a task
+#   community.aws.ecs_task:
+#     operation: stop
+#     cluster: "{{ cluster_name }}"
+#     task_definition: "{{ ecs_family }}"
+#     task: ""
 
 - name: Run task
   community.aws.ecs_task:
@@ -54,5 +54,3 @@
     started_by: ansible_user
     launch_type: EC2
   register: task_output
-
-# - debug: msg="{{ task_output.taskArn }}"
